--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sujilnt.github.io/MyReads/",
   "dependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
@@ -6,11 +7,14 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
